packages/url/src/filter/antlr/OWOFilterParser.ts
// Generated from src/filter/antlr/OWOFilter.g4 by ANTLR 4.9.0-SNAPSHOT
// noinspection ES6UnusedImports,ExceptionCaughtLocallyJS


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { OWOFilterVisitor } from "./OWOFilterVisitor";


export class OWOFilterParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly DATE = 47;
	public static readonly DATETIME = 48;
	public static readonly TIME = 49;
	public static readonly IDENTIFIER = 50;
	public static readonly STRING = 51;
	public static readonly NUMBER = 52;
	public static readonly INTEGER = 53;
	public static readonly WHITESPACE = 54;
	public static readonly COMMENT = 55;
	public static readonly LINE_COMMENT = 56;
	public static readonly RULE_root = 0;
	public static readonly RULE_expression = 1;
	public static readonly RULE_term = 2;
	public static readonly RULE_invocable = 3;
	public static readonly RULE_invocation = 4;
	public static readonly RULE_indexer = 5;
	public static readonly RULE_function = 6;
	public static readonly RULE_paramList = 7;
	public static readonly RULE_unit = 8;
	public static readonly RULE_dateTimePrecision = 9;
	public static readonly RULE_pluralDateTimePrecision = 10;
	public static readonly RULE_qualifiedIdentifier = 11;
	public static readonly RULE_externalConstant = 12;
	public static readonly RULE_identifier = 13;
	public static readonly RULE_literal = 14;
	public static readonly RULE_compOp = 15;
	public static readonly RULE_arthOp = 16;
	public static readonly RULE_polarOp = 17;
	public static readonly RULE_logOp = 18;
	public static readonly RULE_boolean = 19;
	public static readonly RULE_null = 20;
	public static readonly RULE_infinity = 21;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"root", "expression", "term", "invocable", "invocation", "indexer", "function",
		"paramList", "unit", "dateTimePrecision", "pluralDateTimePrecision", "qualifiedIdentifier",
		"externalConstant", "identifier", "literal", "compOp", "arthOp", "polarOp",
		"logOp", "boolean", "null", "infinity",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'('", "')'", "'['", "','", "']'", "'year'", "'month'", "'week'",
		"'day'", "'hour'", "'minute'", "'second'", "'millisecond'", "'years'",
		"'months'", "'weeks'", "'days'", "'hours'", "'minutes'", "'seconds'",
		"'milliseconds'", "'.'", "'@'", "'<='", "'<'", "'>'", "'>='", "'='", "'!='",
		"'in'", "'!in'", "'like'", "'!like'", "'ilike'", "'!ilike'", "'+'", "'-'",
		"'*'", "'/'", "'and'", "'or'", "'true'", "'false'", "'null'", "'Infinity'",
		"'infinity'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, undefined, undefined,
		undefined, undefined, undefined, undefined, undefined, "DATE", "DATETIME",
		"TIME", "IDENTIFIER", "STRING", "NUMBER", "INTEGER", "WHITESPACE", "COMMENT",
		"LINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(OWOFilterParser._LITERAL_NAMES, OWOFilterParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return OWOFilterParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "OWOFilter.g4"; }

	// @Override
	public get ruleNames(): string[] { return OWOFilterParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return OWOFilterParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(OWOFilterParser._ATN, this);
	}
	// @RuleVersion(0)
	public root(): RootContext {
		let _localctx: RootContext = new RootContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, OWOFilterParser.RULE_root);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 44;
			this.expression(0);
			this.state = 45;
			this.match(OWOFilterParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, OWOFilterParser.RULE_expression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case OWOFilterParser.T__22:
			case OWOFilterParser.T__41:
			case OWOFilterParser.T__42:
			case OWOFilterParser.T__43:
			case OWOFilterParser.T__44:
			case OWOFilterParser.T__45:
			case OWOFilterParser.DATE:
			case OWOFilterParser.DATETIME:
			case OWOFilterParser.TIME:
			case OWOFilterParser.IDENTIFIER:
			case OWOFilterParser.STRING:
			case OWOFilterParser.NUMBER:
				{
				_localctx = new TermExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 48;
				this.term();
				}
				break;
			case OWOFilterParser.T__35:
			case OWOFilterParser.T__36:
				{
				_localctx = new PolarityExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 49;
				this.polarOp();
				this.state = 50;
				this.expression(6);
				}
				break;
			case OWOFilterParser.T__0:
				{
				_localctx = new ParenthesizedExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 52;
				this.match(OWOFilterParser.T__0);
				this.state = 53;
				this.expression(0);
				this.state = 54;
				this.match(OWOFilterParser.T__1);
				}
				break;
			case OWOFilterParser.T__2:
				{
				_localctx = new ArrayExpressionContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 56;
				this.match(OWOFilterParser.T__2);
				this.state = 57;
				this.expression(0);
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === OWOFilterParser.T__3) {
					{
					{
					this.state = 58;
					this.match(OWOFilterParser.T__3);
					this.state = 59;
					this.expression(0);
					}
					}
					this.state = 64;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 65;
				this.match(OWOFilterParser.T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 83;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 81;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
					case 1:
						{
						_localctx = new ArithmeticExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, OWOFilterParser.RULE_expression);
						this.state = 69;
						if (!(this.precpred(this._ctx, 5))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 5)");
						}
						this.state = 70;
						this.arthOp();
						this.state = 71;
						this.expression(6);
						}
						break;

					case 2:
						{
						_localctx = new ComparisonExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, OWOFilterParser.RULE_expression);
						this.state = 73;
						if (!(this.precpred(this._ctx, 4))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 4)");
						}
						this.state = 74;
						this.compOp();
						this.state = 75;
						this.expression(5);
						}
						break;

					case 3:
						{
						_localctx = new LogicalExpressionContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, OWOFilterParser.RULE_expression);
						this.state = 77;
						if (!(this.precpred(this._ctx, 3))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 3)");
						}
						this.state = 78;
						this.logOp();
						this.state = 79;
						this.expression(4);
						}
						break;
					}
					}
				}
				this.state = 85;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public term(): TermContext {
		let _localctx: TermContext = new TermContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, OWOFilterParser.RULE_term);
		try {
			this.state = 89;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case OWOFilterParser.T__41:
			case OWOFilterParser.T__42:
			case OWOFilterParser.T__43:
			case OWOFilterParser.T__44:
			case OWOFilterParser.T__45:
			case OWOFilterParser.DATE:
			case OWOFilterParser.DATETIME:
			case OWOFilterParser.TIME:
			case OWOFilterParser.STRING:
			case OWOFilterParser.NUMBER:
				_localctx = new LiteralTermContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 86;
				this.literal();
				}
				break;
			case OWOFilterParser.IDENTIFIER:
				_localctx = new QualifiedIdentifierTermContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 87;
				this.qualifiedIdentifier();
				}
				break;
			case OWOFilterParser.T__22:
				_localctx = new ExternalConstantTermContext(_localctx);
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 88;
				this.externalConstant();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public invocable(): InvocableContext {
		let _localctx: InvocableContext = new InvocableContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, OWOFilterParser.RULE_invocable);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 91;
			this.function();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public invocation(): InvocationContext {
		let _localctx: InvocationContext = new InvocationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, OWOFilterParser.RULE_invocation);
		try {
			_localctx = new MemberInvocationContext(_localctx);
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 93;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public indexer(): IndexerContext {
		let _localctx: IndexerContext = new IndexerContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, OWOFilterParser.RULE_indexer);
		try {
			this.state = 97;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case OWOFilterParser.IDENTIFIER:
				_localctx = new MemberIndexContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 95;
				this.identifier();
				}
				break;
			case OWOFilterParser.INTEGER:
				_localctx = new NumberIndexContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 96;
				this.match(OWOFilterParser.INTEGER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function(): FunctionContext {
		let _localctx: FunctionContext = new FunctionContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, OWOFilterParser.RULE_function);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 99;
			this.identifier();
			this.state = 100;
			this.match(OWOFilterParser.T__0);
			this.state = 102;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OWOFilterParser.T__0) | (1 << OWOFilterParser.T__2) | (1 << OWOFilterParser.T__22))) !== 0) || ((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & ((1 << (OWOFilterParser.T__35 - 36)) | (1 << (OWOFilterParser.T__36 - 36)) | (1 << (OWOFilterParser.T__41 - 36)) | (1 << (OWOFilterParser.T__42 - 36)) | (1 << (OWOFilterParser.T__43 - 36)) | (1 << (OWOFilterParser.T__44 - 36)) | (1 << (OWOFilterParser.T__45 - 36)) | (1 << (OWOFilterParser.DATE - 36)) | (1 << (OWOFilterParser.DATETIME - 36)) | (1 << (OWOFilterParser.TIME - 36)) | (1 << (OWOFilterParser.IDENTIFIER - 36)) | (1 << (OWOFilterParser.STRING - 36)) | (1 << (OWOFilterParser.NUMBER - 36)))) !== 0)) {
				{
				this.state = 101;
				this.paramList();
				}
			}

			this.state = 104;
			this.match(OWOFilterParser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paramList(): ParamListContext {
		let _localctx: ParamListContext = new ParamListContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, OWOFilterParser.RULE_paramList);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 106;
			this.expression(0);
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === OWOFilterParser.T__3) {
				{
				{
				this.state = 107;
				this.match(OWOFilterParser.T__3);
				this.state = 108;
				this.expression(0);
				}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public unit(): UnitContext {
		let _localctx: UnitContext = new UnitContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, OWOFilterParser.RULE_unit);
		try {
			this.state = 117;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case OWOFilterParser.T__5:
			case OWOFilterParser.T__6:
			case OWOFilterParser.T__7:
			case OWOFilterParser.T__8:
			case OWOFilterParser.T__9:
			case OWOFilterParser.T__10:
			case OWOFilterParser.T__11:
			case OWOFilterParser.T__12:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 114;
				this.dateTimePrecision();
				}
				break;
			case OWOFilterParser.T__13:
			case OWOFilterParser.T__14:
			case OWOFilterParser.T__15:
			case OWOFilterParser.T__16:
			case OWOFilterParser.T__17:
			case OWOFilterParser.T__18:
			case OWOFilterParser.T__19:
			case OWOFilterParser.T__20:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 115;
				this.pluralDateTimePrecision();
				}
				break;
			case OWOFilterParser.STRING:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 116;
				this.match(OWOFilterParser.STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dateTimePrecision(): DateTimePrecisionContext {
		let _localctx: DateTimePrecisionContext = new DateTimePrecisionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, OWOFilterParser.RULE_dateTimePrecision);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OWOFilterParser.T__5) | (1 << OWOFilterParser.T__6) | (1 << OWOFilterParser.T__7) | (1 << OWOFilterParser.T__8) | (1 << OWOFilterParser.T__9) | (1 << OWOFilterParser.T__10) | (1 << OWOFilterParser.T__11) | (1 << OWOFilterParser.T__12))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pluralDateTimePrecision(): PluralDateTimePrecisionContext {
		let _localctx: PluralDateTimePrecisionContext = new PluralDateTimePrecisionContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, OWOFilterParser.RULE_pluralDateTimePrecision);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 121;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << OWOFilterParser.T__13) | (1 << OWOFilterParser.T__14) | (1 << OWOFilterParser.T__15) | (1 << OWOFilterParser.T__16) | (1 << OWOFilterParser.T__17) | (1 << OWOFilterParser.T__18) | (1 << OWOFilterParser.T__19) | (1 << OWOFilterParser.T__20))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public qualifiedIdentifier(): QualifiedIdentifierContext {
		let _localctx: QualifiedIdentifierContext = new QualifiedIdentifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, OWOFilterParser.RULE_qualifiedIdentifier);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 123;
					this.identifier();
					this.state = 124;
					this.match(OWOFilterParser.T__21);
					}
					}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 9, this._ctx);
			}
			this.state = 131;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public externalConstant(): ExternalConstantContext {
		let _localctx: ExternalConstantContext = new ExternalConstantContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, OWOFilterParser.RULE_externalConstant);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(OWOFilterParser.T__22);
			this.state = 134;
			_la = this._input.LA(1);
			if (!(_la === OWOFilterParser.IDENTIFIER || _la === OWOFilterParser.STRING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
